src/test/ui/infinite/infinite-type-alias-mutual-recursion.stderr
error: cycle detected when expanding type alias
  --> $DIR/infinite-type-alias-mutual-recursion.rs:5:1
   |
LL | type X3 = X1;
   | ^^^^^^^

error: cycle detected when expanding type alias
  --> $DIR/infinite-type-alias-mutual-recursion.rs:1:1
   |
LL | type X1 = X2;
   | ^^^^^^^

error: cycle detected when expanding type alias
  --> $DIR/infinite-type-alias-mutual-recursion.rs:3:1
   |
LL | type X2 = X3;
   | ^^^^^^^

error: aborting due to 3 previous errors

